src/objects/LeadAccount__c.object
<CustomObject>
    <description>Combines data from Leads and Accounts</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  Lead__r.Company,  Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id), TEXT(Lead__r.Status) , TEXT(Account__r.Client_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>HybridAccount2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  Lead__r.CreatedDate ,  Account__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  Lead__r.LastActivityDate  ,  Account__r.LastActivityDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  DATEVALUE(LastModifiedDate)  , DATEVALUE( Account__r.LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>HybridAccount2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment_Affiliation__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id), TEXT( Lead__r.Segmentation_Affiliation__c ) , TEXT(  Account__r.Segment_Affiliation__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  Lead__r.State, Account__r.BillingState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(ISBLANK(Account__r.Id),  TEXT(Lead__r.AccountTypeNew__c) , TEXT( Account__r.AccTypeNew__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>LeadAccount</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>LeadAccount Auto ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadAccount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>